--- a/lesson3/roles/vsftpd-install/templates/vsftpd.conf.j2
+++ b/lesson3/roles/vsftpd-install/templates/vsftpd.conf.j2
@@ -12,3 +12,9 @@ listen=YES
 listen_ipv6=NO
 pam_service_name=vsftpd
 userlist_enable=YES
+anon_root={{ anon_root }}
+anon_other_write_enable=YES
+hide_ids=YES
+pasv_min_port={{ pasv_min_port }}
+pasv_max_port={{ pasv_max_port }}
+
